# xai-gspread

./: README.md  gspread_components.py  pyproject.toml  requirements.txt
.github/workflows/: run-workflow-tests.yml
examples/: SimpleGSpread.xircuits
