[project]
name = "xai-gspread"
version = "0.1.0"
description = "A Xircuits component library for Google drive"
authors = [{ name = "XpressAI", email = "eduardo@xpress.ai" }]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/XpressAI/xai-gspread"
keywords = ["xircuits", "gdrive", "cloud Storage"]

dependencies = [
    "gspread==6.1.4"
]

# Xircuits-specific configurations
[tool.xircuits]
default_example_path = "examples/SimpleGSpread.xircuits"
requirements_path = "requirements.txt"
